[package]
name = "mini-debugger-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustyline = "9.1.0"
nix = "0.23.0"
libc = "0.2"

structopt = { version = "0.3", default-features = false }
clap = "2.*"

# elf and dwarf
goblin = "0.4"
gimli = "0.26"
regex = "1"
typed-arena = "2.0"
fallible-iterator = "0.2"
num_cpus = "1.13"
crossbeam = "0.8"
memmap = "0.7"